--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "quasar": "^1.0.0",
     "register-service-worker": "^1.6.2",
+    "serve": "^11.3.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vue-trumbowyg": "^3.4.2"
