--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
         "serve": "^11.3.0",
         "vue": "^2.6.10",
         "vue-router": "^3.1.3",
-        "vue-trumbowyg": "^3.4.2"
+        "vue-trumbowyg": "^3.4.2",
+        "vuex": "^3.1.2",
+        "vuex-persistedstate": "^2.7.0"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^4.1.0",
